优化groovy函数执行，利用本体cache缓存classloader，仅提升10%左右