@@ -7,15 +7,17 @@ import com.aircas.ptr.foundry.ontology.aspect.FuncParam;
 import com.aircas.ptr.foundry.ontology.model.dto.FunctionParamDTO;
 import com.aircas.ptr.foundry.ontology.model.enums.FunctionParamCategoryEnum;
 import com.aircas.ptr.foundry.ontology.model.po.FunctionParamPO;
-import com.aircas.ptr.foundry.ontology.model.vo.FunctionResultVO;
 import com.aircas.ptr.foundry.ontology.service.GroovyService;
 import com.aircas.ptr.foundry.ontology.utils.SchemaHandleUtil;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.module.jsonSchema.JsonSchema;
 import com.fasterxml.jackson.module.jsonSchema.JsonSchemaGenerator;
+import com.google.common.cache.Cache;
+import com.google.common.cache.CacheBuilder;
+import com.google.common.cache.RemovalNotification;
 import groovy.lang.GroovyClassLoader;
+import groovy.lang.GroovyCodeSource;
 import groovy.lang.GroovyObject;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
@@ -25,15 +27,24 @@ import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang.StringUtils;
 import org.codehaus.groovy.ast.ClassHelper;
 import org.codehaus.groovy.ast.ClassNode;
+import org.codehaus.groovy.control.CompilationFailedException;
+import org.codehaus.groovy.control.CompilerConfiguration;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
+import javax.annotation.PreDestroy;
 import java.io.IOException;
+import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -41,109 +52,49 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class GroovyServiceImpl implements GroovyService {
 
-
     private final ObjectMapper objectMapper = new ObjectMapper();
-
 
     private final static String FUNCTION_RESULT_REFERENCE_NAME = "com.aircas.ptr.foundry.ontology.model.vo.FunctionResultVO";
 
     /**
-     * 解析groovy代码块，获取参数列表和返回值信息   |   旧方法
+     * 按 functionApi 缓存。每个条目使用独立 ClassLoader，失效时可关闭，便于 GC 回收 Class（Metaspace）。
+     * maximumSize / expireAfterAccess 作为兜底，防止忘记 invalidate 时无限增长。
+     */
+    private final Cache<String, CompiledScript> compiledScriptCache = CacheBuilder.newBuilder()
+            .maximumSize(256)
+            .expireAfterAccess(24, TimeUnit.HOURS)
+            .removalListener((RemovalNotification<String, CompiledScript> notification) -> {
+                CompiledScript value = notification.getValue();
+                if (value != null) {
+                    value.close();
+                }
+            })
+            .build();
+
+    /**
+     * 解析groovy代码块，获取参数列表和返回值信息
      *
      * @param code
      * @return
      */
-    /*@Override
-    public List<FunctionParamDTO> parseFunctionParam(String code) {
-        //Groovy编译器配置
-        CompilerConfiguration config = new CompilerConfiguration();
-        CompilationUnit compilationUnit = new CompilationUnit(config);
-        //添加代码块
-        compilationUnit.addSource("temp.groovy",code);
-        //compile方法用于执行编译过程,Phases.SEMANTIC_ANALYSIS 表示编译到语义分析阶段。这个阶段会生成抽象语法树（AST），但不会生成字节码
-        compilationUnit.compile(Phases.SEMANTIC_ANALYSIS);
-        List<FunctionParamDTO> params = new ArrayList<>();
-        //提取类信息
-        for(ClassNode classNode : compilationUnit.getAST().getClasses()){
-            //提取方法信息
-            List<FunctionParamDTO> paramList = classNode.getMethods().stream().map(m -> {
-                List<FunctionParamDTO> funcParams = new ArrayList<>();
-                //参数列表
-                Parameter[] parameters = m.getParameters();
-                for (int i = 0; i < parameters.length; i++) {
-                    Parameter parameter = parameters[i];
-                    ClassNode type = parameter.getType();
-                    GenericsType[] genericsTypes = type.getGenericsTypes();
-                    String typeName = type.getName();
-                    if(genericsTypes != null && genericsTypes.length > 0 ){
-                        typeName = String.format("%s<%s>",typeName,String.join(",", Arrays.stream(genericsTypes).map(g -> g.getType().getName()).collect(Collectors.toList())));
-                    }
-                    String name = parameter.getName();
-                    boolean basicType = isBasicType(type);
-                    FunctionParamDTO paramDTO = FunctionParamDTO.builder()
-                            .paramName(name)
-                            .referenceName(typeName)
-                            .category(FunctionParamCategoryEnum.INPUT.toString())
-                            //todo List/Map/Set等
-                            .paramType(basicType ? FunctionParamType.getTypeEnum(type.getName()) : "OBJECT")
-                            .paramOrder(i + 1)
-                            .paramSchema(basicType ? null : getParamSchema(type.getTypeClass()))
-                            .build();
-                    funcParams.add(paramDTO);
-                }
-                //返回值
-                ClassNode returnType = m.getReturnType();
-                boolean basicType = isBasicType(returnType);
-                String typeName = returnType.getName();
-                GenericsType[] returnGenericsTypes = returnType.getGenericsTypes();
-                if(returnGenericsTypes != null && returnGenericsTypes.length > 0 ){
-                    typeName = String.format("%s<%s>",typeName,String.join(",", Arrays.stream(returnGenericsTypes).map(g -> g.getType().getName()).collect(Collectors.toList())));
-                }
-                FunctionParamDTO returnParam = FunctionParamDTO.builder()
-                        .category(FunctionParamCategoryEnum.OUTPUT.toString())
-                        //todo List/Map/Set等
-                        .paramType(basicType ? FunctionParamType.getTypeEnum(returnType.getName()) : "OBJECT")
-                        .referenceName(typeName)
-                        .paramName("result")
-                        .paramOrder(0)
-                        .paramSchema(basicType ? null : getParamSchema(returnType.getTypeClass()))
-                        .build();
-                funcParams.add(returnParam);
-                return funcParams;
-            }).flatMap(List::stream).collect(Collectors.toList());
-            params.addAll(paramList);
-        }
-        return params;
-    }*/
     @Override
     public List<FunctionParamDTO> parseGroovyCode(String code) {
-        //code 解析校验
         PreconditionUtils.checkArgument(StringUtils.isNotEmpty(code), "code不能为空");
-        GroovyClassLoader loader = new GroovyClassLoader();
-        loader.parseClass(code);
-        Class[] allClasses = loader.getLoadedClasses();
-        PreconditionUtils.checkArgument(allClasses != null && allClasses.length > 0, "class不能为空");
-        //filter出包含handle的method且方法返回类型为FunctionResultVO
-        var handleClass = Arrays.stream(allClasses).filter(clz -> {
-            var handleMethod = Arrays.stream(clz.getDeclaredMethods()).filter(m -> m.getName().equals("handle")).findFirst();
-            if (!handleMethod.isPresent()) {
-                return false;
-            }
-            return StringUtils.equals(handleMethod.get().getReturnType().getName(), FUNCTION_RESULT_REFERENCE_NAME);
-        }).findFirst();
-        PreconditionUtils.checkArgument(handleClass.isPresent(), "函数名称handle不存在或者返回类型错误");
-        //解析输入参数和输出类型
-        var handleMethod = Arrays.stream(handleClass.get().getDeclaredMethods()).filter(m -> m.getName().equals("handle")).findFirst();
-        JsonSchemaGenerator generator = new JsonSchemaGenerator(objectMapper);
-        Parameter[] parameters = handleMethod.get().getParameters();
-        List<FunctionParamDTO> funcParams = new ArrayList<>();
-
+        // 解析路径不入长期缓存：用完即关 ClassLoader，避免试编译堆积 Metaspace
+        CompiledScript compiled = compile(code);
         try {
+            Method handleMethod = findHandleMethod(compiled.clazz);
+            PreconditionUtils.checkArgument(
+                    handleMethod != null && StringUtils.equals(handleMethod.getReturnType().getName(), FUNCTION_RESULT_REFERENCE_NAME),
+                    "函数名称handle不存在或者返回类型错误");
+            JsonSchemaGenerator generator = new JsonSchemaGenerator(objectMapper);
+            Parameter[] parameters = handleMethod.getParameters();
+            List<FunctionParamDTO> funcParams = new ArrayList<>();
+
             if (parameters != null) {
                 for (int i = 0; i < parameters.length; i++) {
                     String paramName = getParameterName(parameters[i]);
                     Class<?> paramType = parameters[i].getType();
-                    //校验参数类型，先支持基本参数类型
                     PreconditionUtils.checkArgument(FunctionParamTypeEnum.isBasicType(paramType.getName()), "暂不支持复杂类型参数", HttpStatus.BAD_REQUEST);
                     JsonSchema schema = generator.generateSchema(paramType);
                     String jsonSchema = objectMapper.writeValueAsString(schema);
@@ -157,7 +108,7 @@ public class GroovyServiceImpl implements GroovyService {
                             .build());
                 }
             }
-            JavaType returnType = objectMapper.getTypeFactory().constructType(handleMethod.get().getGenericReturnType());
+            JavaType returnType = objectMapper.getTypeFactory().constructType(handleMethod.getGenericReturnType());
             JsonSchema returnSchema = generator.generateSchema(returnType);
             String json = objectMapper.writeValueAsString(returnSchema);
             funcParams.add(FunctionParamDTO.builder()
@@ -175,54 +126,44 @@ public class GroovyServiceImpl implements GroovyService {
             log.error("parseGroovyCode failed:", e);
             throw new BusinessException("parseGroovyCode failed");
         } finally {
-            try {
-                //关闭loader
-                loader.close();
-            } catch (IOException e) {
-                throw new BusinessException("GroovyClassLoader close failed!");
-            }
+            compiled.close();
         }
     }
 
 
     @SneakyThrows
     @Override
-    public String executeGroovy(String code, Map<String, Object> paramMap, List<FunctionParamPO> paramInfos) {
-        //编译groovy代码块，加载类信息
-        var classLoader = new GroovyClassLoader();
-        classLoader.parseClass(code);
-        var classes = classLoader.getLoadedClasses();
-        //筛选handle函数方法
-        var handleClass = Arrays.stream(classes).filter(c -> {
-            var method = Arrays.stream(c.getMethods()).filter(m -> m.getName().equals("handle")).findFirst();
-            return method.isPresent();
-        }).findFirst();
-        PreconditionUtils.checkArgument(handleClass.isPresent(), "函数handle方法不存在");
-        var groovyClass = handleClass.get();
-        var groovyInstance = (GroovyObject) groovyClass.newInstance();
+    public String executeGroovy(String functionApi, String code, Map<String, Object> paramMap, List<FunctionParamPO> paramInfos) {
+        PreconditionUtils.checkArgument(StringUtils.isNotEmpty(functionApi), "functionApi不能为空");
+        Class<?> groovyClass = getOrCompileByFunctionApi(functionApi, code);
+        GroovyObject groovyInstance = (GroovyObject) groovyClass.getDeclaredConstructor().newInstance();
 
-        //参数列表反序列化
         var paramValues = paramInfos.stream().map(p -> {
             var value = paramMap.get(p.getParamName());
-            //PreconditionUtils.checkArgument(value != null, "未找到函数参数：" + p.getParamName());
-            //非基本类型暂时不支持
             if (p.getParamType() == FunctionParamTypeEnum.OBJECT) {
                 throw new BusinessException("parse error");
-            }
-            //基本类型
-            else {
+            } else {
                 return SchemaHandleUtil.convertValue(value, p.getTypeReferenceName());
             }
         }).collect(Collectors.toList());
-        //动态调用handle方法
         var result = CollectionUtils.isEmpty(paramValues) ?
                 groovyInstance.invokeMethod("handle", null) :
                 groovyInstance.invokeMethod("handle", paramValues.toArray(new Object[]{}));
-        //返回值 考虑到类型多样性，暂时仅使用json返回
-        var resultJsonString = objectMapper.writeValueAsString(result);
-        return resultJsonString;
+        return objectMapper.writeValueAsString(result);
     }
 
+    @Override
+    public void invalidateCompiledClass(String functionApi) {
+        if (StringUtils.isEmpty(functionApi)) {
+            return;
+        }
+        compiledScriptCache.invalidate(functionApi);
+    }
+
+    @PreDestroy
+    public void destroy() {
+        compiledScriptCache.invalidateAll();
+    }
 
     private String getParameterName(Parameter parameter) {
         FuncParam funcParam = parameter.getAnnotation(FuncParam.class);
@@ -232,59 +173,116 @@ public class GroovyServiceImpl implements GroovyService {
         return parameter.getName();
     }
 
-
     /**
-     * 提取参数/返回值信息
-     *
-     * @param type
-     * @param category
-     * @return
+     * 按 functionApi 缓存；DB 中 code 变更后 codeHash 不一致则替换并关闭旧 ClassLoader。
      */
-    private FunctionParamDTO extractParamInfo(ClassNode type, FunctionParamCategoryEnum category, Integer
-            order, String paramName) {
-        var basicType = isBasicType(type);
-        //全限定类名
-        var typeName = type.getName();
-        //泛型列表
-        var genericsTypes = type.getGenericsTypes();
-        if (genericsTypes != null && genericsTypes.length > 0) {
-            typeName = String.format("%s<%s>", typeName, String.join(",", Arrays.stream(genericsTypes).map(g -> g.getType().getName()).collect(Collectors.toList())));
+    private Class<?> getOrCompileByFunctionApi(String functionApi, String code) {
+        String codeHash = cacheKey(code);
+        CompiledScript cached = compiledScriptCache.getIfPresent(functionApi);
+        if (cached != null && codeHash.equals(cached.codeHash)) {
+            return cached.clazz;
         }
-        //获取复杂类型参数json结构,基本类型不设定
-        var schema = basicType ? null : SchemaHandleUtil.parser(typeName);
-        return FunctionParamDTO.builder()
-                .category(category)
-                .paramType(basicType ? FunctionParamTypeEnum.getByTypeName(type.getName()) : FunctionParamTypeEnum.OBJECT)
-                .referenceType(typeName)
-                .paramName(paramName)
-                .paramOrder(order)
-                .paramSchema(basicType ? null : schema)
-                .build();
+        CompiledScript compiled = compile(code);
+        // put 替换旧条目时 Guava 会走 removalListener 关闭旧 ClassLoader
+        compiledScriptCache.put(functionApi, compiled);
+        return compiled.clazz;
     }
 
-    /**
-     * 判断参数类型是否为基础类型【基本类型 | 字符串】
-     *
-     * @param classNode
-     * @return
-     */
-    private boolean isBasicType(ClassNode classNode) {
-        return ClassHelper.isPrimitiveType(classNode) || FunctionParamTypeEnum.isBasicType(classNode.getName());
-    }
-
-    /**
-     * 获取classNode json schema结构信息，支持泛型
-     */
-    private String getJsonSchemaByClassNode(ClassNode classNode) {
+    private CompiledScript compile(String code) {
+        String codeHash = cacheKey(code);
+        GroovyClassLoader loader = createGroovyClassLoader();
+        GroovyCodeSource source = new GroovyCodeSource(code, "GroovyFn_" + codeHash + ".groovy", "/groovy/script");
+        source.setCachable(false);
         try {
-            Class clazz = Class.forName(classNode.getName());
-            JsonSchemaGenerator generator = new JsonSchemaGenerator(objectMapper);
-            JsonSchema schema = generator.generateSchema(clazz);
-            return objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(schema);
+            // parseClass 只返回脚本中第一个类；多 class 脚本需在本次 loader 已加载类中找 handle
+            loader.parseClass(source);
+            Class<?> handleClass = findHandleClass(loader);
+            PreconditionUtils.checkArgument(handleClass != null, "函数handle方法不存在");
+            return new CompiledScript(codeHash, handleClass, loader);
         } catch (Exception e) {
-            log.error("getParamSchema failed", e);
-            throw new BusinessException("getParamSchema failed");
+            closeQuietly(loader);
+            throw e;
         }
     }
 
+    private GroovyClassLoader createGroovyClassLoader() {
+        CompilerConfiguration config = new CompilerConfiguration();
+        config.setSourceEncoding(StandardCharsets.UTF_8.name());
+        return new GroovyClassLoader(GroovyServiceImpl.class.getClassLoader(), config);
+    }
+
+    /**
+     * 脚本可定义多个类（如 VisibilityHandler + ComputeSateCoveToPoint）。
+     * 当前使用独立 ClassLoader，getLoadedClasses 只会看到本次编译结果。
+     */
+    private Class<?> findHandleClass(GroovyClassLoader loader) {
+        Class<?>[] loadedClasses = loader.getLoadedClasses();
+        if (loadedClasses == null || loadedClasses.length == 0) {
+            return null;
+        }
+        return Arrays.stream(loadedClasses)
+                .filter(clz -> {
+                    Method handleMethod = findHandleMethod(clz);
+                    return handleMethod != null
+                            && StringUtils.equals(handleMethod.getReturnType().getName(), FUNCTION_RESULT_REFERENCE_NAME);
+                })
+                .findFirst()
+                .orElse(null);
+    }
+
+    private Method findHandleMethod(Class<?> clazz) {
+        return Arrays.stream(clazz.getDeclaredMethods())
+                .filter(m -> "handle".equals(m.getName()))
+                .findFirst()
+                .orElse(null);
+    }
+
+    private String cacheKey(String code) {
+        try {
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            byte[] hash = digest.digest(code.getBytes(StandardCharsets.UTF_8));
+            StringBuilder hex = new StringBuilder(hash.length * 2);
+            for (byte b : hash) {
+                hex.append(String.format("%02x", b));
+            }
+            return hex.toString();
+        } catch (NoSuchAlgorithmException e) {
+            return Integer.toHexString(code.hashCode());
+        }
+    }
+
+    private static void closeQuietly(GroovyClassLoader loader) {
+        if (loader == null) {
+            return;
+        }
+        try {
+            loader.clearCache();
+            loader.close();
+        } catch (IOException e) {
+            // ignore
+        }
+    }
+
+
+    /**
+     * 一个脚本对应一个独立 ClassLoader，失效后关闭即可让 Class 变为可回收。
+     */
+    private static final class CompiledScript {
+        private final String codeHash;
+        private final Class<?> clazz;
+        private final GroovyClassLoader classLoader;
+        private final AtomicBoolean closed = new AtomicBoolean(false);
+
+        private CompiledScript(String codeHash, Class<?> clazz, GroovyClassLoader classLoader) {
+            this.codeHash = codeHash;
+            this.clazz = clazz;
+            this.classLoader = classLoader;
+        }
+
+        private void close() {
+            if (closed.compareAndSet(false, true)) {
+                closeQuietly(classLoader);
+            }
+        }
+    }
 }
